--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="card card-default">
           <div class="card-header">
-            <h3 class="card-title">Audit Area Details ( {{vendorName}} )
+            <h3 class="card-title">Audit Area Details ( {{vendorName}} ) - {{categoryName}} 
             </h3>
          </div>
           <form [formGroup]="questionForm" enctype="multipart/form-data">
