--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -90,6 +90,7 @@
                 <table id="example2" class="table table-bordered table-hover">
                   <thead>
                     <tr class="now_rap text-center sticky_header">
+                      <th>Audit No</th>
                       <th>Vendor Code </th>
                       <th>Vendor Name</th>
                       <th>Location</th>
@@ -99,7 +100,7 @@
                       <th>Report Release Date</th>
                       <th>Report</th>
                       <th>Status Pending At</th>
-                      <th *ngIf="isSuperAdmin || isPlanner">Action </th>
+                      <th *ngIf="isSuperAdmin || isPlanner">View</th>
                       <th *ngIf="isSuperAdmin || isPlanner">Add Auditor</th>
                       <th>Status </th>          
                       <th> Action Plan</th>   
@@ -109,6 +110,7 @@
                   </thead>
                   <tbody>
                     <tr class="tbody_data" *ngFor="let item of viewPlanListToShow| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index"> 
+                      <td>{{item.auditNumber}}</td>
                       <td>{{item.vendorCode}}</td>
                       <td>{{item.vendorName}}</td>
                       <td>{{item.locationName}}</td>
