multiple page development, get score & category, report,executive summary

--- a/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
+++ b/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
@@ -11,24 +11,24 @@
                     <tr class="text-center">
                         <th colspan="8">Observation({{actionPlanList.length}})</th>
                     </tr>
-                    <tr class=" text-center sticky_header fon_9">
+                    <tr class=" text-center sticky_header">
                         <th>Observation</th>
-                        <th>ITEM NO.</th>
+                        <th>Audit Area</th>
                         <th>Regulation </th>
-                        <th>DESIRED IMPROVEMENT POINTS</th>
-                        <th>DETAIL OF IMPROVEMENT PLAN</th>
-                        <th>IN-CHARGE</th>
-                        <th>DATE</th>
+                        <th>Desired Improvement Points </th>
+                        <th>Detail of Improvement Plan</th>
+                        <th>In-Charge</th>
+                        <th>Date</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="tbody_data" *ngFor="let item of actionPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
                         <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>    
-                        <td>{{i+1}}</td>
-                        <td>{{item.regulationText}}</td>
+                        <td><p class="show">{{item.auditArea}}</p></td>
+                        <td><p class="show">{{item.regulationText}}</p></td>
                         <td>{{item.remark}}</td>
-                        <td><textarea [(ngModel)]="item.detailOfImprovement" class="form-control"></textarea></td>
-                        <td><textarea [(ngModel)]="item.incharge" class="form-control"></textarea>
+                        <td><textarea [(ngModel)]="item.detailOfImprovement" class="form-control width-300"></textarea></td>
+                        <td><textarea [(ngModel)]="item.incharge" class="form-control width-300"></textarea>
                         </td>
                         <!-- <td *ngIf="item.dateOfSubmission">{{item.dateOfSubmission | date:dateFormat}}</td> -->
                         <td ><input [(ngModel)]="item.dateOfSubmission" type="date"></td>
