--- a/src/app/dashboard/evidence/section-head-data/section-head-data.component.html
+++ b/src/app/dashboard/evidence/section-head-data/section-head-data.component.html
@@ -16,7 +16,7 @@
                                 <thead>
                                     <tr class=" text-center sticky_header">
                                         <th>Audit No</th>
-                                        <th>Audit Complition Date</th>
+                                        <th>Audit Completion Date</th>
                                         <th>Vendor Code </th>
                                         <th>Vendor Name</th>
                                         <th>Auditor Name </th>
