--- a/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
@@ -1,56 +1,3 @@
-<!-- <section class="content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="header_card">
-                            <h3 class="card-title">Audit Area Details</h3>
-                            <div class="d-flex align-items-center">
-                                <h6 class="mr-1 mb-0">Filters:-</h6>
-                                <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
-                                <input type="text" class="form-control mr-1 filter_css" placeholder="Date ">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive max_hei_table">
-                            <table id="" class="table table-bordered table-hover">
-                                <thead>
-                                    <tr class=" text-center sticky_header">
-                                        <th>Vendor Code </th>
-                                        <th>Vendor Name</th>
-                                        <th>Location</th>
-                                        <th>Any Other Location</th>
-                                        <th>Planned Start Date </th>
-                                        <th>Planned End Date</th>
-                                       
-                                       
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                   <tr class="tbody_data">                   
-                                     <td></td>
-                                     <td></td>
-                                     <td></td>
-                                     <td></td>
-                                     <td></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <nav aria-label="Page navigation example">
-                            <div class="pagination justift_end">
-                              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
-                            </div>
-                          </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
-
 <section class="content">
     <div class="container-fluid">
         <div class="row">
@@ -58,7 +5,7 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="header_card">
-                            <h3 class="card-title">Audit Area Details</h3>
+                            <h3 class="card-title">Audit Plan ( Evidence Received )</h3>
                             <div class="d-flex align-items-center">
                                 <h6 class="mr-1 mb-0">Filters:-</h6>
                                 <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
@@ -84,7 +31,7 @@
                                 </thead>
                                 <tbody>
                                     <tr class="tbody_data" *ngFor="let item of auditPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
-                                        <td>AU{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>
+                                        <td>{{item.auditNumber}}</td>
                                         <td>{{item.vendorCode}}</td>
                                         <td>{{item.vendorName}}</td>
                                         <td>{{item.plannedStartDate | date:dateFormat}}</td>
