--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -55,7 +55,7 @@
           <div class="card">
             <div class="card-header">
               <div class="header_card  justify-content-center mb-1">
-                <h3 class="card-title">View Plan Details</h3>              
+                <h3 class="card-title">Audit Plan ( Manage Audit ) </h3>              
               </div>
               <div class="d-flex align-items-center justify-content-center">
                 <div class=" mr-1">
