--- a/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
+++ b/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
@@ -13,12 +13,12 @@
                     </tr>
                     <tr class=" text-center sticky_header">
                         <th>Observation</th>
-                        <th>ITEM NO.</th>
-                        <th>SUB ITEM NO. </th>
-                        <th>DESIRED IMPROVEMENT POINTS</th>
-                        <th>DETAIL OF IMPROVEMENT PLAN</th>
-                        <th>IN-CHARGE</th>
-                        <th>DATE</th>
+                        <th>Audit Area</th>
+                        <th>Regulation </th>
+                        <th>Desired Improvement Points </th>
+                        <th>Detail of Improvement Plan</th>
+                        <th>In-Charge</th>
+                        <th>Date</th>
                         <th>Upload(Multiple Evidence Can be Uploaded)</th>
                         <th>Action</th>
                     </tr>
@@ -26,14 +26,14 @@
                 <tbody>
                     <tr class="tbody_data" *ngFor="let item of actionPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
                         <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>    
-                        <td>{{i+1}}</td>
-                        <td>{{i+1}}.1</td>
-                        <td>{{item.remarkOfAuditor}}</td>
+                        <td><p class="show">{{item.auditArea}}</p></td>
+                        <td><p class="show">{{item.regulationText}}</p></td>
+                        <td>{{item.remark}}</td>
                         <td>{{item.detailOfImprovement}}</td>
                         <td>{{item.incharge}}</td>
                         <td>{{item.dateOfSubmission | date:dateFormat}}</td>
                         <td><input type="file" id="exampleInputFile" (change)="fileUpload($event)"
-                         class="form-control"  multiple></td>
+                         class="form-control width-300"  multiple></td>
                         <td><button class="btn btn-success"  (click)="submit(item)">Submit</button></td>
                     </tr>
                 </tbody>
