--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -10,7 +10,8 @@
       </li>
     </ul>
   <h4 class="fon_16">Vendor Management System</h4>
-    <ul class="navbar-nav">
+    <ul class="navbar-nav align-items-center">
+      <li><b>{{firstName}}</b></li>
       <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown"  aria-expanded="false">
           <i class="fas fa-sign-out-alt"></i>
