--- a/src/styles.css
+++ b/src/styles.css
@@ -53502,8 +53502,9 @@ font-size: 13px;
   .sticky_header {
     position: sticky;
     top: -7px;
-    font-size: 12px;
-    background: #f6f6f6;
+    font-size: 12px !important;
+    
+    background: #f6f6f6 !important;
   }
   .tbody_data{
    white-space: nowrap;
