section head & dpm components changes & updations

--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -7,7 +7,7 @@
                         <div class="d-flex justif_space_betwen">
                             <h3 class="card-title">Create Plan Details</h3>
                             <div class="d-flex">
-                                <input type="file" id="upload" hidden />
+                                <input type="file"  (change)="bulkUpload($event)" id="upload" hidden />
                                 <button for="upload" class="button-upload btn btn-primary"> 
                                     <i class="fas fa-upload mr-1 upload_ico"></i>
                                     <span class="now_rap">Upload Plan</span></button>
